// backend/build.gradle

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.0'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    // For WebClient (reactive HTTP client)
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    // For JSON processing with ObjectMapper
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // NEW: Dependency for loading .env files
    implementation 'io.github.cdimascio:dotenv-java:2.3.2' // Or the latest version

    //Data scraping
    implementation 'org.jsoup:jsoup:1.15.3'
    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
}

tasks.named('test') {
    useJUnitPlatform()
}
